--- a/train.html
+++ b/train.html
@@ -26,11 +26,10 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#"
-                        role="button">
+                    <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#">
                         <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="UserImg">
                         Hat's & Thing
-                        <i></i>
+                        <i class=""></i>
                     </a>
                 </li>
             </ul>
@@ -40,16 +39,16 @@
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Active Task(2)</a>
+                    <a href="#" class="nav-link"><strong>Active Task(2)</strong></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Completed(1)</a>
+                    <a href="#" class="nav-link"><strong>Completed(1)</strong></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Archived(3)</a>
+                    <a href="#" class="nav-link"><strong>Archived(3)</strong></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Closed(0)</a>
+                    <a href="#" class="nav-link"><strong>Closed(0)</strong></a>
                 </li>
             </ul>
         </nav>
@@ -57,20 +56,21 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="#" class="brand-link">
-                <img src="dist/img/AdminLTELogo.png" alt="WorklyLogo" class="brand-image img-circle elevation-3"
+                <img src="dist/img/AdminLTELogo.png" alt="1" class="brand-image img-circle elevation-3"
                     style="opacity: .8">
                 <span class="brand-text font-weight-light">Workly</span>
             </a>
 
             <!-- Sidebar -->
             <div class="sidebar">
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
+                <div class="user-panel mt-3 pb-3 mb-3 d-flex new-task">
+                    <!-- <div class="image">
                         <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="New Task">
-                    </div>
-                    <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
-                    </div>
+                    </div> -->
+                    <!-- <div class="info">
+                        <a href="#" class="d-block">Username</a>
+                    </div> -->
+                    + New Task
                 </div>
 
                 <!-- Sidebar Menu -->
