--- a/train.html
+++ b/train.html
@@ -7,6 +7,7 @@
     <title>WORKLY</title>
 
     <link rel="stylesheet" href="train.css">
+    <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
 </head>
 
 <body>
@@ -16,20 +17,20 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                        <i class="fas fa-expand-arrows-alt">message</i>
+                        <i class="fas fa-envelope"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#"
                         role="button">
-                        <i class="fas fa-th-large">notification</i>
+                        <i class="fas fa-bell"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="UserImg">
+                        <img src="image/user1-128x128.jpg" class="img-circle elevation-2" alt="UserImg">
                         Hat's & Thing
-                        <i class=""></i>
+                        <i class="fas fa-angle-left"></i>
                     </a>
                 </li>
             </ul>
@@ -56,21 +57,14 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="#" class="brand-link">
-                <img src="dist/img/AdminLTELogo.png" alt="1" class="brand-image img-circle elevation-3"
-                    style="opacity: .8">
-                <span class="brand-text font-weight-light">Workly</span>
+                <img src="image/workly.jpeg" alt="1" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <span class="brand-text font-weight-light"><strong>Workly</strong></span>
             </a>
 
             <!-- Sidebar -->
             <div class="sidebar">
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex new-task">
-                    <!-- <div class="image">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="New Task">
-                    </div> -->
-                    <!-- <div class="info">
-                        <a href="#" class="d-block">Username</a>
-                    </div> -->
-                    + New Task
+                    <p>+ New Task</p>
                 </div>
 
                 <!-- Sidebar Menu -->
@@ -79,7 +73,7 @@
                         data-accordion="false">
                         <li class="nav-item">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
+                                <i class="nav-icon fas fa-home"></i>
                                 <p>
                                     Home
                                 </p>
@@ -87,7 +81,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
+                                <i class="nav-icon fas fa-tasks"></i>
                                 <p>
                                     My Tasks
                                     <span></span>
@@ -96,7 +90,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
+                                <i class="nav-icon fas fa-book"></i>
                                 <p>
                                     Task Catalog
                                 </p>
@@ -104,10 +98,10 @@
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
+                                <i class="nav-icon fas fa-users"></i>
                                 <p>
                                     Community
-                                    <i></i>
+                                    <i class="fas fa-angle-left"></i>
                                 </p>
                             </a>
                         </li>
@@ -120,13 +114,15 @@
 
         <div class="content-wrapper">
             <div class="card">
-                <span><i></i></span>
-                <span>Task</span>
-                <span>$199.99</span>
-                <span>Username</span>
-                <span>Status</span>
-                <span><i></i></span>
-                <span><i></i></span>
+                <span class="card-item"><i class="fas fa-list"></i></span>
+                <span class="card-item">Task
+                    <div>Custom Task</div>
+                </span>
+                <span class="card-item">$199.99</span>
+                <span class="card-item">Username</span>
+                <span class="card-item">Status</span>
+                <span class="card-item"><i class="fas fa-comment"></i></span>
+                <span class="card-item"><i class="fas fa-ellipsis-h"></i></span>
             </div>
         </div>
     </div>
